# high-school-python-code

./: README.md  hello.py  pyproject.toml
colab/: lesson_1.ipynb
src/lesson_1/: 1-4.py  1-5.py  1-6.py  1-7.py  1.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  ex.py  lesson_1.ipynb
src/lesson_10/: 10-1.py  10-2.py  10-3.py  10-4.py  10-5.py  10-6.py  10-7.py  ex.py  lesson_10.ipynb
src/lesson_2/: 2-1.py  2-2.py  2-3.py  2-4.py  2-5.py  2-6.py  2-7.py  ex.py  lesson_2.ipynb
src/lesson_3/: 3-1.py  3-2.py  3-3.py  3-4.py  3-5.py  3-6.py  3-7.py  ex.py  lesson_3.ipynb
src/lesson_4/: 4-1.py  4-2.py  4-3.py  4-4.py  4-5.py  4-6.py  4-7.py  ex.py  lesson_4.ipynb
src/lesson_5/: 5-1.py  5-2.py  5-3.py  5-4.py  5-5.py  5-6.py  5-7.py  ex.py  lesson_5.ipynb
src/lesson_6/: 6-1.py  6-2.py  6-3.py  6-4.py  6-5.py  6-6.py  6-7.py  ex.py  lesson_6.ipynb
src/lesson_7/: 7-1.py  7-2.py  7-3.py  7-4.py  7-5.py  7-6.py  7-7.py  ex.py  lesson_7.ipynb
src/lesson_8/: 8-1.py  8-2.py  8-3.py  8-4.py  8-5.py  8-6.py  8-7.py  ex.py  lesson_8.ipynb
src/lesson_9/: 9-1.py  9-2.py  9-3.py  9-4.py  9-5.py  9-6.py  9-7.py  ex.py  lesson_9.ipynb
