[project]
name = "high-school-python-code"
version = "0.1.0"
description = "『ハイスクールPython』で使用されているソースコードをまとめたものです"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.1",
  "numpy>=2.2.3",
  "pandas>=2.2.3",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
]

[dependency-groups]
dev = ["mypy>=1.14.1", "pytest>=8.3.4", "ruff>=0.9.1"]
